【kitchen】我页布局以及我的资料，收货地址，设置等页面的布局。

--- a/QianJiaJia-kitchen/app/src/main/res/values/strings.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="main_tab_shop">购物车</string>
     <string name="main_tab_me">我页</string>
 
+    <string-array name="leftmenu_register_way">
+        <item>手机注册</item>
+        <item>邮箱注册</item>
+    </string-array>
+
 </resources>
