--- a/QianJiaJia-kitchen/app/src/main/res/values/strings.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/strings.xml
@@ -12,4 +12,38 @@
         <item>邮箱注册</item>
     </string-array>
 
+    <string-array name="province">
+        <item>北京市</item>
+        <item>天津市</item>
+        <item>上海市</item>
+        <item>重庆市</item>
+        <item>河北省</item>
+        <item>陕西省</item>
+        <item>山西省</item>
+        <item>辽宁省</item>
+        <item>吉林省</item>
+        <item>黑龙江省</item>
+        <item>江苏省</item>
+        <item>浙江省</item>
+        <item>安徽省</item>
+        <item>福建省</item>
+        <item>山东省</item>
+        <item>江西省</item>
+        <item>河南省</item>
+        <item>湖北省</item>
+        <item>湖南省</item>
+        <item>广东省</item>
+        <item>海南省</item>
+        <item>四川省</item>
+        <item>贵州省</item>
+        <item>云南省</item>
+        <item>甘肃省</item>
+        <item>青海省</item>
+        <item>内蒙古</item>
+        <item>西藏自治区</item>
+        <item>广西壮族自治区</item>
+        <item>宁夏回族自治区</item>
+        <item>新疆维吾尔族自治区</item>
+    </string-array>
+
 </resources>
