--- a/QianJiaJia-kitchen/app/src/main/res/values/strings.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">kitchen</string>
+    <string name="app_name">Kitchen</string>
 
     <!--main bottom tab-->
     <string name="main_tab_home">首页</string>
